--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -1,3 +1,3 @@
-elixir_version=1.17.2
-erlang_version=23.3.2
+elixir_version=1.17.2-otp-25
+erlang_version=25.3.2.15
 hook_pre_compile="mix assets.deploy"
