--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -1,3 +1,3 @@
-elixir_version=1.14.5-otp-24
-erlang_version=24.0.6
+elixir_version=1.12.1
+erlang_version=24.0.3
 hook_pre_compile="mix assets.deploy"
